fixed websocket error during qr code request

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 PORT="4000"
 NODE_ENV="development"
-URL_WEBHOOK="https://l.crm.bikesquare.eu/api/whatsapp/receive.json"
+URL_WEBHOOK="https://l.crm.bikesquare.eu/cake/whatsapp/receive.json"
 ENABLE_WEBHOOK="true"
 ENABLE_WEBSOCKET="true"
 BOT_NAME="Whatsapp Bot"
