--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src",
 		"start": "node -r tsconfig-paths/register -r ts-node ./dist/main.js",
 		"dev": "nodemon src/main.ts",
+		"test": "nodemon src/example.ts",
 		"lint": "eslint . --ext .ts",
 		"format": "prettier . --write",
 		"postinstall": "prisma generate",
@@ -46,9 +47,8 @@
 	"dependencies": {
 		"@hapi/boom": "^10.0.1",
 		"@prisma/client": "^4.16.2",
-		"axios": "^1.7.7",
 		"@whiskeysockets/baileys": "^6.7.18",
-    	"qrcode-terminal": "^0.12.0",
+		"axios": "^1.7.7",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
